[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "realsense_orbslam"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyrealsense2", "numpy", "scipy", "viser"]

[project.scripts]
realsense-slam = "realsense_orbslam.run:main"

[tool.setuptools]
packages = ["realsense_orbslam"]